--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -13,6 +13,11 @@
   background-color: $color-primary-light-1;
   padding: 1rem;
 
+
+  &--active {
+    // display: block;
+  }
+
   &__info-top {
     display: flex;
     flex-direction: column;
