--- a/app/assets/stylesheets/components/_communities.scss
+++ b/app/assets/stylesheets/components/_communities.scss
@@ -1,9 +1,9 @@
 .communities {
-  position: relative;
+  margin-bottom: -57rem;
   &__container {
     background-color: $color-grey-light-2;
 
-    position: absolute;
+    position: relative;
     top: -50rem;
   }
 
@@ -21,15 +21,15 @@
   &__box {
 
     &--1{
-      width: 45%;
+      width: 70%;
     }
 
     &--2{
-      width: 60%;
+      width: 75%;
     }
 
     &--3{
-      width: 80%;
+      width: 90%;
     }
   }
 
@@ -37,6 +37,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    flex-wrap: wrap;
   }
 
   &__icon {
