--- a/app/assets/stylesheets/components/_photo-slide.scss
+++ b/app/assets/stylesheets/components/_photo-slide.scss
@@ -7,7 +7,7 @@
     align-items: center;
 
     position: relative;
-    padding: 4rem 0;
+    padding: 2rem 1rem;
     background-color: $color-grey-light-2;
     top: -3rem;
 
