--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -124,7 +124,7 @@
     height: 3rem;
     width: 3rem;
     top: 0;
-    left: 1rem;
+    left: 0;
     z-index: 2000;
     text-align: center;
     cursor: pointer;
@@ -138,7 +138,7 @@
     width: 3rem;
     position: absolute;
     top: 0;
-    left: 1rem;
+    left: 0;
     z-index: 1000;
     transition: transform .7s cubic-bezier(0,.65,1,.55);
     background-color: $white;
