--- a/app/assets/stylesheets/utils/_utilities.scss
+++ b/app/assets/stylesheets/utils/_utilities.scss
@@ -17,3 +17,7 @@
 .utility-padding {
   padding: 2rem;
 }
+
+.utility-padding-bottom-lg {
+  padding-bottom: 5rem;
+}
